8/31/2019 HW10 Web Scrape initial commit

--- a/dev_files/mission_to_mars.ipynb
+++ b/dev_files/mission_to_mars.ipynb
@@ -9818,12 +9818,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables.to_html(\"/html/mars_.html\")"
+    "tables.to_html(\"../html/mars_facts.html\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
